src/test/resources/Parser/SyntaxErrors/SignatureCollision.front
class A:
    test (A a, B b) {}
    test (A a, B b, A a) {}
    test (A a, B b) -> A {}

class B: